fix: remove sticky profile on mobile, center all demo text elements

--- a/src/app/about/page.module.css
+++ b/src/app/about/page.module.css
@@ -62,9 +62,15 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  position: sticky;
-  top: 100px;
-  height: fit-content;
+}
+
+/* Only apply sticky on large screens */
+@media (min-width: 1025px) {
+  .profileCol {
+    position: sticky;
+    top: 100px;
+    height: fit-content;
+  }
 }
 
 .photo {
