--- a/src/components/demos/HallucinationHunterDemo.module.css
+++ b/src/components/demos/HallucinationHunterDemo.module.css
@@ -267,6 +267,7 @@
     color: var(--color-accent);
     margin-bottom: 0.3rem;
     text-transform: uppercase;
+  text-align: center;
 }
 
 .infoCard p {
@@ -274,6 +275,7 @@
     color: var(--color-text-light);
     line-height: 1.4;
     margin: 0;
+  text-align: center;
 }
 
 .metrics {
